--- a/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
+++ b/NeproFinishedGoodsAngular5/ClientApp/src/app/user/user.component.html
@@ -2,11 +2,11 @@
   <div class="container-fluid">
     <div class="card-body pull-right p-1">
 
-      <button class="btn btn-success btn-sm" ><i class="fa fa-plus-square-o" aria-hidden="true"></i>New</button>
+      <button class="btn btn-success btn-sm" (click)="showhide()"><i class="fa fa-plus-square-o" aria-hidden="true"></i>New</button>
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Edit</button>-->
       <button class="btn btn-success btn-sm" (click)="save()"><i class="fa fa-floppy-o" aria-hidden="true"></i>Submit</button>
       <!--<button class="btn btn-success btn-sm"><i class="fa fa-trash" aria-hidden="true"></i>Delete</button>-->
-      <button class="btn btn-success btn-sm"><i class="fa fa-undo" aria-hidden="true"></i>Back</button>
+      <button class="btn btn-success btn-sm" (click)="showhide2()"><i class="fa fa-undo" aria-hidden="true"></i>Back</button>
     </div>
     <div class="clearfix"></div>
 
@@ -18,7 +18,7 @@
 
       <div class="clearfix"></div>
       <!--<form class="form-horizontal" [formGroup]="userForm">-->
-        <div class="row">
+        <div class="row" *ngIf="show">
           <div class="col-md-12">
             <div class="card ">
               <div class="card-header card-header-rose card-header-text">
@@ -36,7 +36,7 @@
                         <label class="col-sm-3 col-md-4 col-form-label">User Name</label>
                         <div class="col-sm-8 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control" placeholder="" formControlName="username" [ngClass]="{'is-invalid': submitted && f.username.errors}">
+                            <input type="text" class="form-control" placeholder="" [(ngModel)]="username" formControlName='username' id="username" [ngClass]="{'is-invalid': submitted && f.username.errors}">
                             <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
                               <div *ngIf="f.username.errors.required">* Username is required</div>
                             </div>
@@ -49,10 +49,10 @@
                         <label class="col-sm-2  col-md-4 col-form-label">E-mail</label>
                         <div class="col-sm-9 col-md-8">
                           <div class="form-group">
-                            <input type="text" class="form-control" formControlName="email" [ngClass]="{'is-invalid': submitted && f.email.errors}">
-                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                              <div *ngIf="f.email.errors.required">* Email Id is required</div>
-                              <div *ngIf="f.email.errors.email">* Email Id must be at least 6 characters</div>
+                            <input type="text" class="form-control" formControlName="emailid" [ngClass]="{'is-invalid': submitted && f.emailid.errors}">
+                            <div *ngIf="submitted && f.emailid.errors" class="invalid-feedback">
+                              <div *ngIf="f.emailid.errors.required">* Email Id is required</div>
+                              <div *ngIf="f.emailid.errors.email">* Email Id must be at least 6 characters</div>
                             </div>
                           </div>
                         </div>
@@ -126,9 +126,9 @@
                             <div class="col-sm-6 col-md-3">
                               <div class="form-group">
                                 <input type="checkbox" class="form-checkbox" formControlName="StorePicker" [ngClass]="{'is-invalid': submitted && f.StorePicker.errors}">
-                                <div *ngIf="submitted && f.StorePicker.errors" class="invalid-feedback">
+                                <!--<div *ngIf="submitted && f.StorePicker.errors" class="invalid-feedback">
                                   <div *ngIf="f.StorePicker.errors.required">* Store Picker is required</div>
-                                </div>
+                                </div>-->
                               </div>
                             </div>
                           </div>
@@ -149,7 +149,7 @@
 
 
       <!--</form>-->
-      <div class="row  mb-5">
+      <div class="row  mb-5" *ngIf="hide">
         <div class="col-md-12">
           <div class="card">
             <div class="card-header card-header-rose card-header-icon">
@@ -161,10 +161,14 @@
             <div class="card-body">
               <div class="table-responsive">
 
-                <ag-grid-angular style="width:100%; height: auto"
-                                 class="ag-theme-balham"
-                                 [rowData]="rowData1"
-                                 [columnDefs]="columnDefs1"></ag-grid-angular>
+                <ag-grid-angular style="width:100%; height: 560px" class="ag-theme-balham" [rowData]="rowData1"
+                                 [columnDefs]="columnDefs1" [animateRows]="true"
+                                 (gridReady)="onAddressGridReady($event)"  [gridOptions]="gridOptions">
+                  
+                </ag-grid-angular>
+
+                
+
 
               </div>
             </div>
